<resources>
    <string name="app_name">E-LOCK</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_booking">Booking</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_reserve">Reserve</string>
    <string name="title_apartment">My apartments</string>
    <string name="title_my_reservations">My reservations</string>
    <string name="title_my_account">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Hello</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create account</string>
    <string name="my_account">My Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="my_reservation">My reservation</string>
    <string name="Starting">Start</string>
    <string name="Ending">End</string>
    <string name="address_title">Address : </string>
    <string name="unlock">Unlock door</string>
    <string name="connect">Connect</string>
    <string name="Remember_me">Remember me</string>
    <string name="invalid_email">Your email does not match any account, if you do not have an account, please create one.</string>
    <string name="invalid_password">Wrong password !</string>
    <string name="my_apartments_list_err">You do not own any apartments at the moment</string>
    <string name="my_reservations_list_err">You do not currently have any bookings</string>
    <string name="reserve_list_err">Connection error please try again later</string>
    <string name="reserve">Reserve</string>
    <string name="alert_title">Booking complete</string>
    <string name="alert_msg">Thank for booking</string>
    <string name="title_apart_details">Apartment details</string>
    <string name="no_match_passwords">Non-matching passwords</string>
    <string name="correct_email">Please enter a correct email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_firstname">Please enter your Firstname</string>
    <string name="enter_lastname">Please enter your Lastname</string>
    <string name="used_email">Email already used</string>
    <string name="bottom_wave">bottom_wave</string>

</resources>